--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -8,11 +8,12 @@
     </title>
 </head>
 
-<body>
+<body background-color="white">
     <script language="javascript" type="text/javascript" src="HelloWorld.js">
         document.write("Hello World")
         console.log("We are learning JAVASCRIPT");
     </script>
+    <img src="hello.jpg">
 </body>
 
 </html>
