new with three different types of boxes in js

--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -9,11 +9,12 @@
 </head>
 
 <body background-color="white">
+    <input type="button" value="CLICK ME" onclick="promptbox()">
     <script language="javascript" type="text/javascript" src="HelloWorld.js">
-        document.write("Hello World")
         console.log("We are learning JAVASCRIPT");
     </script>
-    <img src="hello.jpg">
+    <button onclick="alertbox()">Hello</button>
+    <button onclick="myFunction()">Hey!<button></button>
 </body>
 
 </html>
