--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Untitled Document
-    </title>
+        A new document with hello world and other</title>
 </head>
 
 <body background-color="white">
-    <input type="button" value="CLICK ME" onclick="promptbox()">
+    <form>
+        <input type="button" value="CLICK ME" onclick="promptbox()">
+    </form>
     <script language="javascript" type="text/javascript" src="HelloWorld.js">
         console.log("We are learning JAVASCRIPT");
     </script>
