html with new stuff

--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -1,8 +1,12 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="hello">
+    <meta name="keywords" content="king, hum, raja, beta">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Akshay">
     <title>
         A new document with hello world and other</title>
 </head>
@@ -15,7 +19,29 @@
         console.log("We are learning JAVASCRIPT");
     </script>
     <button onclick="alertbox()">Hello</button>
-    <button onclick="myFunction()">Hey!<button></button>
+    <button onclick="myFunction()">Hey!</button>
+    <form>
+        <label>
+            <input type="radio" name="radio1" value="True" id="radio1.1"> True
+        </label>
+        <label>
+            <input type="radio" name="radio1" value="False" id="radio1.2"> False
+        </label>
+    </form>
+    <table border="1">
+        <tr>
+            <td>hello</td>
+            <td>hey</td>
+        </tr>
+        <tr>
+            <td>yess</td>
+            <td>yola</td>
+        </tr>
+    </table>
+
+    <form>
+        <input type="datetime">
+    </form>
 </body>
 
 </html>
