--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="HelloWorld.css">
+
+<!--everything in the head part is not shown to the user, it is a part which the search engine uses to search for pages, do SEO from here-->
+<!--use hyphens instead of underscore, underscores treat the whole series of alphabets as a single word whereas hyphens separate them-->
 
 <head>
     <meta charset="utf-8">
@@ -11,24 +15,35 @@
         A new document with hello world and other</title>
 </head>
 
-<body background-color="white">
+<!--while writing a code, make sure that you use tags like strong and emphasis instead of bold and italics, <strong>\&<em> and not <b>\&<i>-->
+
+<body>
+    <!-- according to my understanding forms are used to allocate or reserve landscape oriented spaces on webpages for their content, used generally for input-->
+    <!-- and hence are different from paragraphs-->
     <form>
         <input type="button" value="CLICK ME" onclick="promptbox()">
     </form>
+
     <script language="javascript" type="text/javascript" src="HelloWorld.js">
         console.log("We are learning JAVASCRIPT");
     </script>
-    <button onclick="alertbox()">Hello</button>
-    <button onclick="myFunction()">Hey!</button>
-    <form>
+
+    <form border="1" align="center"><button onclick="alertbox()">Hello</button>
+        <button onclick="myFunction()">Hey!</button>
+    </form>
+
+    <form border="1" align="center">
         <label>
             <input type="radio" name="radio1" value="True" id="radio1.1"> True
         </label>
+        <!--both the radio buttons from which you are asking the user to choose should must have the same name.-->
         <label>
             <input type="radio" name="radio1" value="False" id="radio1.2"> False
         </label>
     </form>
-    <table border="1">
+
+    <!--the following code is used for making tables in HTML where tr is for table row and td for table data-->
+    <table border="1" align="center">
         <tr>
             <td>hello</td>
             <td>hey</td>
@@ -39,9 +54,51 @@
         </tr>
     </table>
 
-    <form>
-        <input type="datetime">
-    </form>
+    <p class="sampleText">
+        <!-- the modifier or parameter class which is used over here is for the purpose of using the me-defined class sampleText in this scope-->
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.
+    </p>
+    <!--The above tag is used to separate a block of text in a given page just as a paragraph-->
+
+    <p style="color: rgba(68, 0, 255, 0.644);">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.
+    </p>
+
+    <div>
+        <!--used as a container tag to hold and apply styles, has no special function-->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit
+            anim id est laborum.
+        </p>
+    </div>
+    <!--the above tag is used as a container tag to hold and apply styles, has no special function-->
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.
+    </p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.
+    </p>
+
 </body>
 
 </html>
