new things and completed basic css course

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="HelloWorld.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 
 <!--everything in the head part is not shown to the user, it is a part which the search engine uses to search for pages, do SEO from here-->
 <!--use hyphens instead of underscore, underscores treat the whole series of alphabets as a single word whereas hyphens separate them-->
@@ -24,8 +24,7 @@
         <input type="button" value="CLICK ME" onclick="promptbox()">
     </form>
 
-    <script language="javascript" type="text/javascript" src="HelloWorld.js">
-        console.log("We are learning JAVASCRIPT");
+    <script language="javascript" type="text/javascript" src="index.js">
     </script>
 
     <form border="1" align="center"><button onclick="alertbox()">Hello</button>
@@ -85,19 +84,27 @@
     </div>
     <!--the above tag is used as a container tag to hold and apply styles, has no special function-->
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-        anim id est laborum.
+    <p><a href="#"> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit
+            anim id est laborum.
+        </a>
+        <!--the hash here in anchor tab is used as a buffer value leading nowhere but doing the function-->
     </p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-        anim id est laborum.
-    </p>
+    <div id="projectOpen">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit
+            anim id est laborum.
+        </p>
+    </div>
 
 </body>
 
