--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
+<!--links-->
 <link rel="stylesheet" type="text/css" href="index.css">
 
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+</script>
 <!--everything in the head part is not shown to the user, it is a part which the search engine uses to search for pages, do SEO from here-->
 <!--use hyphens instead of underscore, underscores treat the whole series of alphabets as a single word whereas hyphens separate them-->
 
@@ -11,8 +21,12 @@
     <meta name="keywords" content="king, hum, raja, beta">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Akshay">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>
-        A new document with hello world and other</title>
+        A new document with hello world and other
+    </title>
 </head>
 
 <!--while writing a code, make sure that you use tags like strong and emphasis instead of bold and italics, <strong>\&<em> and not <b>\&<i>-->
