--- a/main.html
+++ b/main.html
@@ -79,8 +79,8 @@
             say</button>
     </div>
 
-    <script defer src="https://maps.googleapis.com/maps/api/js?callback=initMap">
-    </script>
+    <!--script defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+    script-->
 
     <div id="map">
     </div>
