--- a/html/usingSemanticTabs_2.html
+++ b/html/usingSemanticTabs_2.html
@@ -5,9 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Using summary and detail tabs</title>
+    <link rel='stylesheet' href='../androidicons-1.0/iconfont/css/androidicons.css'>
 </head>
 
 <body>
+    <details>
+        <summary>
+            This is a summary of something.
+        </summary>
+        <P>this is the text which is to be revealed</P>
+    </details>
+    <details>
+        <summary>
+            Second summary of something.
+        </summary>
+        <ol>
+            <li>hello</li>
+            <li>howdy</li>
+            <li>how you doin'</li>
+        </ol>
+    </details>
+    <details>
+        <summary>
+            Third summary of something.
+        </summary>
+        <P><span class="ai-home"></span></P>
+    </details>
     <details>
         <summary>
             This is a summary of something.
