--- a/html/inputForms.html
+++ b/html/inputForms.html
@@ -110,7 +110,7 @@
     </div>
     <!--the above tag is used as a container tag to hold and apply styles, has no special function-->
 
-    <p><a href="#"> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    <p><a href="#index"> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
             dolore eu
