--- a/html/map-carousel.html
+++ b/html/map-carousel.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <!-- CSS only -->
-<link href="../../../../../usr/local/lib/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <!--everything in the head part is not shown to the user, it is a part which the search engine uses to search for pages, do SEO from here-->
 <!--use hyphens instead of underscore, underscores treat the whole series of alphabets as a single word whereas hyphens separate them-->
 
@@ -32,7 +32,7 @@
     }
 </style>
 <!-- JavaScript Bundle with Popper -->
-<script src="../../../../../usr/local/lib/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js">
+<script src="../bootstrap/dist/js/bootstrap.bundle.min.js">
 </script>
 <script>
     function initMap() {
