a few new things

--- a/public/html/project-travel-contact.html
+++ b/public/html/project-travel-contact.html
@@ -8,10 +8,12 @@
 <link rel='stylesheet' href='../../androidicons-1.0/iconfont/css/androidicons.css'>
 <link rel="stylesheet" href="../css/project-travel.css">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini-Project form</title>
+    <script src="https://kit.fontawesome.com/b6ad227bb3.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="body">
@@ -52,6 +54,7 @@
             <button onclick="confirm('Are you sure?')" class="btn btn-primary">Register</button>
         </div>
     </form>
+
     <footer class="py-3 px-1 bg-dark fixed-bottom">
         <div class="container">
             <p class="m-0 text-center text-white">
