changes I am not sure I made

--- a/html/map-carousel.html
+++ b/html/map-carousel.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <!-- CSS only -->
-<link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <!--everything in the head part is not shown to the user, it is a part which the search engine uses to search for pages, do SEO from here-->
 <!--use hyphens instead of underscore, underscores treat the whole series of alphabets as a single word whereas hyphens separate them-->
 
@@ -50,21 +50,26 @@
 <body>
     <nav class="navbar bg-dark navbar-dark navbar-expand-lg">
         <div class="container">
-            <a href="#" class="navbar-brand">Learning Bootstrap</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
+            <a href="#" class="navbar-brand"></a>
+            <button class="navbar-toggler fixed-top" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="#past">Highlights</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#themes">Themes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#faq">FAQs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                            href="https://wiehack.bvpieee.com/Wiehack3-backend-main/portal/login.html">Login</a>
                     </li>
                 </ul>
             </div>
