--- a/public/html/project-travel.html
+++ b/public/html/project-travel.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel='stylesheet' href='../../bootstrap/dist/css/bootstrap.min.css'>
-<link rel='stylesheet' href='../../androidicons-1.0/iconfont/css/androidicons.css'>
+<link rel='stylesheet' href='../../node_modules/bootstrap/dist/css/bootstrap.min.css'>
+<link rel='stylesheet' href='../../node_modules/androidicons-1.0/iconfont/css/androidicons.css'>
 <link rel="stylesheet" href="../css/project-travel.css">
-<script src='../../jquery/dist/jquery.min.js'></script>
+<script src='../../node_modules/jquery/dist/jquery.min.js'></script>
 
 <head>
     <meta charset="UTF-8">
