--- a/html/contact-form.html
+++ b/html/contact-form.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../dashicons/dashicons.css">
+<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../node_modules/dashicons/dashicons.css">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <title>Creating a contact form</title>
 </head>
 
-<script src="../bootstrap/dist/js/bootstrap.bundle.min.js">
+<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js">
 </script>
 
 <style>
