--- a/public/html/formsPracticeProblems.html
+++ b/public/html/formsPracticeProblems.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="../css/formsPracticeProblems.css">
-<link rel='stylesheet' href='../../bootstrap/dist/css/bootstrap.min.css'>
-<link rel='stylesheet' href='../../dashicons/dashicons.css'>
-<link rel="stylesheet" href="../../@mdi/font/css/materialdesignicons.min.css">
+<link rel='stylesheet' href='../../node_modules/bootstrap/dist/css/bootstrap.min.css'>
+<link rel='stylesheet' href='../../node_modules/dashicons/dashicons.css'>
+<link rel="stylesheet" href="../../node_modules/@mdi/font/css/materialdesignicons.min.css">
 
 <head>
     <meta charset="UTF-8">
