--- a/html/addingIcons.html
+++ b/html/addingIcons.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adding icons</title>
     <script src='https://kit.fontawesome.com/b6ad227bb3.js' crossorigin='anonymous'></script>
-    <link rel='stylesheet' href='../androidicons-1.0/iconfont/css/androidicons.css'>
-    <link rel='stylesheet' href='../dashicons/dashicons.css'>
+    <link rel='stylesheet' href='../node_modules/androidicons-1.0/iconfont/css/androidicons.css'>
+    <link rel='stylesheet' href='../node_modules//dashicons/dashicons.css'>
     <style>
         #fb {
             padding: 4pt;
